refact: json 데이터 구조 맞춤

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "recipe-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.5",
