--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.5",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
-    "@mui/styled-engine-sc": "^5.10.3",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/system": "^5.11.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
