--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recipe-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://127.0.0.1:8080",
   "dependencies": {
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.5",
