--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_BASE_URL=http://127.0.0.1:8080
+REACT_APP_BASE_URL_DEV=http://esjay.iptime.org:8080
+REACT_APP_BASE_URL_LOCAL=http://localhost:8080
 DISABLE_ESLINT_PLUGIN=true
