--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.8.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "resolutions": {
@@ -63,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint-config-prettier": "^8.6.0",
