--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_BASE_URL_DEV=https://backend.esjay.click
-REACT_APP_BASE_URL_LOCAL=http://localhost:8080
+REACT_APP_BASE_URL_LOCAL=https://backend.esjay.click
 DISABLE_ESLINT_PLUGIN=true
